removed timer text

--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
     <main>
         <div class="row1">
             <div class="timerBox">
-                <span class="timer" id="timerLuiz">21 dias</span>
+                <span class="timer" id="timerLuiz"></span>
                 <span class="name">Luiz</span>
             </div>
             <div class="timerBox">
-                <span class="timer" id="timerPedro">21 dias</span>
+                <span class="timer" id="timerPedro"></span>
                 <span class="name">Pedro</span>
             </div>
             <div class="timerBox">
-                <span class="timer" id="timerDaniel">21 dias</span>
+                <span class="timer" id="timerDaniel"></span>
                 <span class="name">Daniel</span>
             </div>
             <div class="timerBox">
-                <span class="timer" id="timerRyan">21 dias</span>
+                <span class="timer" id="timerRyan"></span>
                 <span class="name">Ryan</span>
             </div>
         </div>
         <div class="row2">
             <div class="timerBox">
-                <span class="timer" id="timerPaulo">365 dias</span>
+                <span class="timer" id="timerPaulo"></span>
                 <span class="name">Paulo</span>
             </div>
             <div class="timerBox">
-                <span class="timer" id="timerBia">21 dias</span>
+                <span class="timer" id="timerBia"></span>
                 <span class="name">Bia</span>
             </div>
             <div class="timerBox">
-                <span class="timer" id="timerOsmar">21 dias</span>
+                <span class="timer" id="timerOsmar"></span>
                 <span class="name">Osmar</span>
             </div>
         </div>
