added title tag

--- a/index.html
+++ b/index.html
@@ -15,33 +15,33 @@
     <main>
         <div class="row1">
             <div class="timerBox">
-                <span class="timer" id="timerLuiz"></span>
+                <span title="05 de agosto" class="timer" id="timerLuiz"></span>
                 <span class="name">Luiz</span>
             </div>
             <div class="timerBox">
-                <span class="timer" id="timerPedro"></span>
+                <span title="31 de dezembro" class="timer" id="timerPedro"></span>
                 <span class="name">Pedro</span>
             </div>
             <div class="timerBox">
-                <span class="timer" id="timerDaniel"></span>
+                <span title="17 de Agosto" class="timer" id="timerDaniel"></span>
                 <span class="name">Daniel</span>
             </div>
             <div class="timerBox">
-                <span class="timer" id="timerRyan"></span>
+                <span title="17 de abril" class="timer" id="timerRyan"></span>
                 <span class="name">Ryan</span>
             </div>
         </div>
         <div class="row2">
             <div class="timerBox">
-                <span class="timer" id="timerPaulo"></span>
+                <span title="25 de dezembro" class="timer" id="timerPaulo"></span>
                 <span class="name">Paulo</span>
             </div>
             <div class="timerBox">
-                <span class="timer" id="timerBia"></span>
+                <span title="25 de maio" class="timer" id="timerBia"></span>
                 <span class="name">Bia</span>
             </div>
             <div class="timerBox">
-                <span class="timer" id="timerOsmar"></span>
+                <span title="25 de novembro" class="timer" id="timerOsmar"></span>
                 <span class="name">Osmar</span>
             </div>
         </div>
