--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 <span title="25 de novembro" class="timer" id="timerOsmar"></span>
                 <span class="name">Osmar</span>
             </div>
+            <div class="timerBox">
+                <span title="04 de março" class="timer" id="timerNov"></span>
+                <span class="name">Nov</span>
+            </div>
         </div>
     </main>
 
