`add:` ximbas birthday

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                 <span class="name">Pedro</span>
             </div>
             <div class="timerBox">
+                <span title="16 de novembro" class="timer" id="timerXimbas"></span>
+                <span class="name">Ximbas</span>
+            </div>
+            <div class="timerBox">
                 <span title="17 de Agosto" class="timer" id="timerDaniel"></span>
                 <span class="name">Daniel</span>
             </div>
